exports[`Ellipsis should default max-width to 100% 1`] = `
Object {
  "display": "inline-block",
  "max-width": "100%",
  "overflow": "hidden",
  "text-overflow": "ellipsis",
  "white-space": "nowrap",
  "word-wrap": "normal",
}
`;

exports[`Ellipsis should pass parameter to the value of max-width 1`] = `
Object {
  "display": "inline-block",
  "max-width": "250px",
  "overflow": "hidden",
  "text-overflow": "ellipsis",
  "white-space": "nowrap",
  "word-wrap": "normal",
}
`;
